--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,3 +1,15 @@
+/* resets */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 body 
 {
     font-size: 62.5%; 
@@ -9,11 +21,106 @@ fieldset { border:0; }
 { 
     text-decoration: underline !important; 
 }
+
+/* grid system */
+[class*="row-"] {
+  margin-bottom: 20px;
+}
+[class*="row-"]:last-child {
+  margin-bottom: 0;
+}
+[class*="col-"] {
+}
+ 
+@media all and ( min-width: 768px ) {
+ 
+  /* all cols margin */
+  [class*="col-"] {
+    margin-right: 20px;
+  }
+  [class*="col-"]:last-child {
+    margin-right: 0;
+  }
+ 
+  /* make the columns responsive */
+  .col-1-2 {
+    float: left;
+    width: 50%;
+  }
+  .col-1-4 {
+    float: left;
+    width: 25%;
+  }
+  .col-1-8 {
+    float: left;
+    width: 25%;
+  }
+ 
+  /* 2 span rows */
+  .row-2 {
+    padding-left: 20px;
+  }
+  .row-2 [class*="col-"]:first-child {
+    margin-left: -20px;
+  }
+ 
+  /* 4 span rows */
+  .row-4 {
+    padding-left: 60px;
+  }
+  .row-4 [class*="col-"]:first-child {
+    margin-left: -60px;
+  }
+ 
+  /* 8 span rows */
+  .row-8 {
+    padding-left: 60px;
+  }
+  .row-8 [class*="col-"]:nth-child(4n+1) {
+    margin-left: -60px;
+  }
+  .row-8 [class*="col-"]:nth-child(5n-1) {
+    margin-right: 0;
+  }
+  .row-8 [class*="col-"]:nth-child(6n-1) {
+    clear: both;
+  }
+ 
+}
+ 
+@media all and ( min-width: 1200px ) {
+  /* adjust width */
+  .col-1-8 {
+    float: left;
+    width: 12.5%;
+  }
+ 
+  /* 8 span rows */
+  .row-8 {
+    padding-left: 140px;
+  }
+  /* reset these... */
+  .row-8 [class*="col-"]:nth-child(4n+1) {
+    margin-left: 0;
+  }
+  .row-8 [class*="col-"]:nth-child(5n-1) {
+    margin-right: 20px;
+  }
+  .row-8 [class*="col-"]:nth-child(6n-1) {
+    clear: none;
+  }
+  /* and add this */
+  .row-8 [class*="col-"]:nth-child(1) {
+    margin-left: -140px;
+  }
+ 
+}
+
 #progress-section {
     height: 60%;
-    width:40%;
+    width:80%;
     line-height: 20px;
-    background-color:grey;
+    background-color:#F0F0F0;
     text-align: center;
     padding:2%;
     margin:auto;
@@ -26,55 +133,72 @@ fieldset { border:0; }
     margin-bottom: 20px;
 }
 .progress div.ui-widget-header{
-    background-image: none;
-    /*background-color: #ADD8E6;*/
+    /*background-image: none;
+    background-color: #ADD8E6;*/
 }
 
 .progress.aboveMax .ui-progressbar
 {
-    background-image: none;
+    /*background-image: none;*/
     background-color: #FFFFFF;
 }
 
 .progress.aboveMax .ui-progressbar-value
 {
-    background-image: none;
-    background-color: #FF0000;
+    background-color: #f0a3a3;
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f0a3a3),color-stop(1, #f42323));
+    background-image: -webkit-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -ms-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -o-linear-gradient(top, #f0a3a3, #f42323);    
 }
 
 .progress.belowMax .ui-progressbar
 {
-    background-image: none;
+    /*background-image: none;*/
     background-color: #FFFFFF;
+}
+
+.ui-progressbar .ui-progressbar-value
+{
+    margin:0;
 }
 
 .progress.belowMax .ui-progressbar-value
 {
-    background-image: none;
+    /*background-image: none;*/
     background-color: #ADD8E6;
 }
 
 #plus25, #minus25, #plus10, #minus10
 {
-    width:50px;
+    width:10%;
 }
 .btn-text
 {
-    font-size:14px;
-    text-align: center;
+    font-size:80%;
+    margin-left:-10px;
 }
+.col-1-2
+{
+    width: 50%;
+}
+.col-1-8
+{
+    width: 12.5%;
+}
+
 select,.ui-select-menu 
 { 
     float: left; 
-    margin-right: 10px; 
 }
 select 
 { 
-    width: 200px;
-    margin-left:23px;
+    width: 80%;
+    margin-left:10%;
     height:30px; 
 }
 #progressbar-select-menu
 {
-    width: 200px !important;
+    width: 40% !important;
 }
